# msgraph-mcp

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/skills/speckit-plan/: SKILL.md
.github/workflows/: deploy.yml
.specify/: init-options.json
.specify/memory/: constitution.md
infra/: main.bicep
msgraph_mcp/: auth.py  config.py  graph.py  server.py  store.py
specs/001-persistent-credentials/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-persistent-credentials/checklists/: requirements.md
specs/001-persistent-credentials/contracts/: credential-store.md
specs/002-todo-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-crud/checklists/: requirements.md
specs/002-todo-crud/contracts/: mcp-tools.md
specs/003-email-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-email-tools/checklists/: requirements.md
specs/003-email-tools/contracts/: mcp-tools.md
specs/004-calendar-wrapper/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-calendar-wrapper/checklists/: requirements.md
specs/main/: data-model.md  quickstart.md  research.md
specs/msa-oauth/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
src/msgraph_mcp/: __init__.py  app.py  server.py
tests/: __init__.py  conftest.py  test_app.py  test_auth.py  test_config.py  test_graph.py  test_server.py  test_store.py  test_tools.py
(+3 files in other folders)
