[project]
name = "msgraph-mcp"
version = "0.1.0"
description = "Microsoft Graph MCP integration"
requires-python = ">=3.10"
dependencies = [
    "gunicorn>=22.0.0",
    "mcp>=1.26.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]
